web/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	main {
		@apply max-w-screen-lg w-[100vw] h-[100vh] p-6 md:p-10 pb-[73px] md:pb-[89px] font-default m-auto overflow-hidden flex justify-center items-center flex-col;
	}
}

@layer components {
	.btn {
		@apply bg-primary font-bold px-4 py-2 rounded shadow text-white cursor-pointer hover:opacity-90 transition;
	}
	.gbtn {
		@apply rounded border-[1px] border-[#ccc] py-2 px-4 text-white font-bold hover:bg-white hover:bg-opacity-5 transition-colors cursor-pointer;
	}
	.ebtn {
		@apply rounded border-[1px] border-red-500 py-2 px-4 text-red-500 font-bold transition-colors hover:bg-white hover:bg-opacity-5 cursor-pointer;
	}
	.emsg {
		@apply rounded border-[1px] border-red-700 py-2 px-4 bg-red-700 font-bold;
	}
	.item {
		@apply rounded border-[1px] border-[#ccc] py-2 px-4 text-white font-bold hover:bg-white hover:bg-opacity-5 transition-colors cursor-pointer;
	}
	.form {
		@apply flex flex-col;
	}
	.form input[type="text"],
	.form input[type="password"],
	.form select {
		@apply rounded border-[1px] border-border py-2 px-3 bg-background;
	}
	.form input[type="submit"] {
		@apply rounded py-2 px-3 bg-primary font-bold cursor-pointer hover:opacity-90;
	}
	.form label {
		@apply text-white text-lg opacity-70;
	}
}

@layer utilities {
	.background {
		@apply rounded-md p-6 md:p-10 bg-lightbackground shadow-xl;
	}
}

